--- a/.gitignore
+++ b/.gitignore
@@ -5,4 +5,10 @@
 *.py[co]
 *.mo
 *~
+istorage/local_settings.py
+media/
+static/
+static_files/
+db.sqlite3
+file_storage/migrations/
 [a-z0-9]{40,}
