--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 asgiref==3.6.0
-Django==4.2
+backports.zoneinfo==0.2.1
+Django==4.1
 django-cors-headers==3.14.0
 djangorestframework==3.14.0
 mysqlclient==2.1.1
