--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,10 @@ asgiref==3.6.0
 Django==4.1
 django-cors-headers==3.14.0
 djangorestframework==3.14.0
+dnspython==2.3.0
 mysqlclient==2.1.1
+pymongo==4.3.3
+pypdf==3.8.0
 pytz==2023.3
 sqlparse==0.4.3
 Unidecode==1.3.6
